# emojiflag

./: .gitignore  .travis.yml  Documentation.txt  LICENSE  README.md  README.rst  requirements-dev.txt  setup.cfg  setup.py
.pytest_cache/v/cache/: lastfailed
emojiflag/: __init__.py  emojiflag.py  utils.py
tests/: test_doc.py  test_emojiflag.py
