[metadata]
name = emojiflag
version = 1.0.3
description = Emoji country flags for language codes and LCID's
long_description = file: README.rst
url = https://github.com/lotrekagency/emojiflag
license = MIT
author = Lotrek
author_email = dimmitutto@lotrek.it
keywords = emoji, unicode, flag, locale
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
zip_safe = False
packages =
    emojiflag

[bdist_wheel]
universal=0

[tool:pytest]
addopts =
    --cov

[coverage:run]
branch = True
source = emojiflag

[coverage:report]
ignore_errors = True
show_missing = True
